# StravaAnalyzer

./: .gitignore  CHANGELOG.md  CHANGES.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.md  QUICK_REFERENCE.md  README.md  README_IMPLEMENTATION.md  SUMMARY.txt  pyproject.toml  test_cp_fit.py
.github/: SHAREDWORKFLOWS_MIGRATION.md
.github/workflows/: commitlint.yml  create-release.yml  publish.yml  release.yml  tests.yml
docs/: ADR_001_LAYERED_ARCHITECTURE.md  ADR_002_TIME_WEIGHTED_AVERAGING.md  ARCHITECTURE_GUIDE.md  CONFIGURATION.md  METRICS.md  METRICS_GUIDE.md  QUICK_START.md  TESTING_STRATEGY.md  VERSION_MANAGEMENT.md
examples/: README.md  activity_summary.json  config_example.yaml  enriched_activities_sample.csv
notebooks/: strava_dashboard.ipynb
src/strava_analyzer/: __init__.py  cli.py  constants.py  exceptions.py  models.py  pipeline.py  settings.py
src/strava_analyzer/analysis/: __init__.py  analyzer.py  summarizer.py  threshold_estimator.py
src/strava_analyzer/data/: __init__.py  loader.py  processor.py  repository.py  splitter.py
src/strava_analyzer/metrics/: __init__.py  advanced_power.py  base.py  basic.py  calculators.py  climbing.py  efficiency.py  fatigue.py  heartrate.py  pace.py  power.py  power_curve.py  tid.py  zone_edges.py  zones.py
src/strava_analyzer/services/: __init__.py  activity_service.py  analysis_service.py
tests/: conftest.py
tests/data/: activities.csv
tests/data/Streams/: stream_14135473042.csv  stream_14202464942.csv  stream_14404077406.csv  stream_14465683233.csv  stream_14851475550.csv  stream_15141336844.csv  stream_15521542206.csv  stream_15919936111.csv  stream_16061753663.csv
tests/fixtures/: sample_activities.csv  sample_config.yaml  sample_stream.csv
tests/unit/: test_calculators.py  test_power.py  test_settings.py
